code improving, log improving, and starting adding performance checks